[package]
name    = "my-boss"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"
publish = false


[dependencies]
anyhow = "*"
clap   = "3.0.0-beta.2"

[dependencies.indexmap]
version  = "*"
features = ["serde"]

[dependencies.serde]
version  = "*"
features = ["derive"]

# TASK: Switch to released version once 0.3.0 is out.
[dependencies.time]
git      = "https://github.com/time-rs/time.git"
branch   = "main"
features = ["serde-human-readable"]

[dependencies.toml]
version  = "*"
features = ["preserve_order"]


[dev-dependencies]
tempfile = "*"
