[package]
name    = "my-boss"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"
publish = false


[dependencies]
anyhow            = "*"
clap              = "3.0.0-beta.2"
csv               = "*"
log               = "*"
pretty_env_logger = "*"
termcolor         = "*"
walkdir           = "*"

[dependencies.indexmap]
version  = "*"
features = ["serde"]

[dependencies.serde]
version  = "*"
features = ["derive"]

[dependencies.tabwriter]
version  = "*"
features = ["ansi_formatting"]

[dependencies.time]
version  = "0.3.0-alpha-2"
features = ["serde-human-readable"]

[dependencies.toml]
version  = "*"
features = ["preserve_order"]
